--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,18 +35,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  lottie: ^2.7.0
-  firebase_auth: ^4.12.1
-  firebase_core: ^2.21.0
+  lottie: ^3.1.3
+  firebase_auth: ^5.3.1
+  firebase_core: ^3.6.0
   google_fonts: ^6.1.0
   get: ^4.6.6
   image_picker: ^1.0.4
   smooth_page_indicator: ^1.1.0
   sign_in_button: ^3.2.0
   google_sign_in: ^6.1.5
-  cloud_firestore: ^4.12.2
+  cloud_firestore: ^5.4.4
   cached_network_image: ^3.3.0
-  firebase_storage: ^11.4.1
+  firebase_storage: ^12.3.4
+  typed_data: ^1.4.0
+  win32: ^5.8.0
+  intl: ^0.19.0
+  emoji_picker_flutter: ^3.1.0
+  firebase_messaging: ^15.1.3
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +62,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
